# ScribeFlow

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  test_color.py  test_colors.py
.github/workflows/: deploy-manual.yml  deploy.yml
app/: config.py  main.py  schemas.py  services.py
docs/: DEPLOYMENT_QUICKSTART.md  deployment.md  docker.md  gcp-setup.md
subtitles/: req_0.ass
